Bug #29692  	Single row inserts can incorrectly report a huge number of row insertions

This bug was caused by unitialized value that was the result of a bad 5.0 merge.